--- a/packages/reaction-i18n/private/data/i18n/en.json
+++ b/packages/reaction-i18n/private/data/i18n/en.json
@@ -32,10 +32,10 @@
           "braintreeDescription": "Braintree payments",
           "catalogLabel": "Catalog",
           "catalogTitle": "Catalog",
-          "catalogDescription": "Allows to create simple products",
-          "coreLabel": "Core",
+          "catalogDescription": "Basic Variant Products",
+          "coreLabel": "Settings",
           "coreTitle": "Dashboard",
-          "coreDescription": "Reaction core shop configuration",
+          "coreDescription": "Core Reaction configuration",
           "genericPaymentLabel": "Generic Payment",
           "genericPaymentDescription": "Generic Payment Method",
           "i18NLabel": "i18n",
