fix auto form styles with hack
template attributes are not being passed through Autoform in some
cases. adding `class='form-control’`  resolves.

--- a/packages/reaction-i18n/private/data/i18n/en.json
+++ b/packages/reaction-i18n/private/data/i18n/en.json
@@ -164,7 +164,8 @@
         "shopTaxMethodsSaved": "Shop Tax Method settings saved.",
         "shopTaxMethodsFailed": "Shop Tax Method settings update failed. ",
         "shopCustomTaxRatesSaved": "Shop Custom Tax Rate saved.",
-        "shopCustomTaxRatesFailed": "Shop Custom Tax Rate update failed. "
+        "shopCustomTaxRatesFailed": "Shop Custom Tax Rate update failed. ",
+        "noCustomTaxRatesFound": "No custom tax rates found."
       },
       "header": {
         "tagsAdd": "Add tag",
